fixed overflow issues

--- a/style.css
+++ b/style.css
@@ -6,15 +6,15 @@ body {
 }
 
 div {
-    width: 400px;
-    height: 300px;
-    border: solid black 2px;
+    width: 700px;
+    height: 400px;
+    border: solid black 1px;
     background-color: white;
+    overflow: hidden;
 }
 
 svg:hover {
-    transform: scale(.9);
-    transform: translateY()
+    transform: translate(100px, 300px);
 }
 
 svg {
